--- a/_MOB_paper.bib
+++ b/_MOB_paper.bib
@@ -34,6 +34,7 @@ year = {2023}
   number    = {1},
   volume    = {1},
   publisher = {Ubiquity Press},
+doi={10.5334/joc.10}
 }
 
 @article{Bran18,
@@ -43,7 +44,8 @@ year = {2023}
   volume={9},
   pages={294},
   year={2018},
-  publisher={Frontiers}
+  publisher={Frontiers},
+doi={10.3389/fpsyg.2018.00294}
 }
 
 @book{JameyWitt23,
@@ -96,7 +98,8 @@ address={New York, NY}
   journal={Journal of Statistical Software},
   volume={95},
   pages={1--36},
-  year={2020}
+  year={2020},
+doi={10.18637/jss.v095.i01}
 }
 
 @article{StemyHein19,
@@ -117,6 +120,7 @@ address={New York, NY}
   volume={117},
   pages={105065},
   year={2021},
+doi={10.1016/j.chiabu.2021.105065},
   publisher={Elsevier}
 }
 
@@ -188,18 +192,28 @@ year={2019}
   number={3},
   pages={329--341},
   year={2021},
-  publisher={Taylor \& Francis}
+  publisher={Taylor \& Francis},
+doi={10.1080/10503307.2020.1785037}
 }
 
 
 @book{RaudyBush02,
   title={Hierarchical linear models: Applications and data analysis methods (2nd ed.)},
   author={Raudenbush, Stephen W and Bryk, Anthony S},
-  volume={1},
   year={2002},
-
   publisher={Sage},
 address={Thousand Oaks, CA}
+}
+
+@article{vanWyLi19,
+  title={Identification of confounded subgroups using linear model-based recursive partitioning},
+  author={van Wie, Michael P and Li, Xintong and Wiedermann, Wolfgang},
+  journal={Psychological Test and Assessment Modeling},
+  volume={61},
+  number={4},
+  pages={365--387},
+  year={2019},
+  publisher={PABST Science Publishers}
 }
 
 
@@ -216,7 +230,8 @@ address={Thousand Oaks, CA}
   journal={Prevention Science},
   pages={1--11},
   year={2021},
-  publisher={Springer}
+  publisher={Springer},
+doi={10.1007/s11121-021-01212-z}
 }
 
 
@@ -228,7 +243,8 @@ address={Thousand Oaks, CA}
   number={2},
   pages={492--514},
   year={2008},
-  publisher={Taylor \& Francis}
+  publisher={Taylor \& Francis},
+doi={10.1198/106186008X319331}
 }
 
 @article{Demi09,
@@ -249,7 +265,8 @@ address={Thousand Oaks, CA}
   volume={80},
   pages={289--316},
   year={2015},
-  publisher={Springer}
+  publisher={Springer},
+doi={10.1007/s11336-013-9388-3}
 }
 
 @article{HennyDeba23,
@@ -260,7 +277,8 @@ address={Thousand Oaks, CA}
   number={1},
   pages={181--212},
   year={2023},
-  publisher={Sage Publications Sage CA: Los Angeles, CA}
+  publisher={Sage Publications Sage CA: Los Angeles, CA},
+doi={10.1177/001316442210771}
 }
 
 @article{KomboyStrob18,
@@ -281,7 +299,8 @@ address={Thousand Oaks, CA}
   volume={55},
   pages={57--69},
   year={2016},
-  publisher={Elsevier}
+  publisher={Elsevier},
+doi={10.1016/j.jsp.2015.12.005}
 }
 
 @article{Luth92,
@@ -313,6 +332,7 @@ address={Thousand Oaks, CA}
   volume={60},
   pages={25--40},
   year={2017},
+doi={10.1016/j.jsp.2016.01.002},
   publisher={Elsevier}
 }
 
@@ -323,7 +343,9 @@ address={Thousand Oaks, CA}
   volume={50},
   pages={2016--2034},
   year={2018},
-  publisher={Springer}
+  publisher={Springer},
+doi={10.3758/s13428-017-0971-x}
+
 }
 
 @manual{Boyl94,
@@ -348,7 +370,6 @@ address={Thousand Oaks, CA}
 	pages            = {322},
 	year             = {2022},
 	doi              = {10.1201/9781315200620},
-	url              = {https://www.taylorfrancis.com/books/mono/10.1201/9781315200620/introduction-rasch-model-examples-carolin-strobl-matthew-zeigenfuse-rudolf-debelak},
 }
 
 @Article{StrMalTut:2009:PM,
@@ -443,13 +464,11 @@ address={Thousand Oaks, CA}
 	title            = {{A} New Stopping Criterion for {R}asch Trees Based on the {M}antel-{H}aenszel Effect Size Measure for Differential Item Functioning},
 	author           = {Henninger, Mirka and Debelak, Rudolf and Strobl, Carolin},
 	journal          = {Educational and Psychological Measurement},
-	publisher        = {PsyArXiv},
 	volume           = {83},
 	number           = {1},
 	pages            = {181--212},
 	year             = {2023},
 	doi              = {10.1177/00131644221077135},
-	url              = {https://journals.sagepub.com/doi/10.1177/00131644221077135},
 }
 
 @Article{     KimLoh:2001,
@@ -499,7 +518,6 @@ address={Thousand Oaks, CA}
     year = {2015},
     volume = {16},
     pages = {3905-3909},
-    url = {https://jmlr.org/papers/v16/hothorn15a.html},
   }
   
 @InCollection{KopAugStr:2013,
@@ -521,7 +539,7 @@ volume = {1985},
 year = {1985},
 number = {2},
 pages = {i-10},
-doi = {https://doi.org/10.1002/j.2330-8516.1985.tb00128.x},
+doi = {10.1002/j.2330-8516.1985.tb00128.x},
 }
 
 @article{Stretal:2021:APM,
@@ -544,6 +562,7 @@ doi = {https://doi.org/10.1002/j.2330-8516.1985.tb00128.x},
   volume = {29},
   number = {1},
   pages = {67--91},
+doi={10.1111/j.1745-3984.1992.tb00368.x}
 }
 
 @Article{PhiRusHor:2018:JoCaGS,
